--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>마이크테스트</title>
+    <title>Title</title>
 </head>
 <body>
-
+아 좀돼라;;
 </body>
 </html>
