--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,120 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css" />
+    <!--font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-아 좀돼라;;
+<!--Header-->
+<div class="row h-1">
+    <div class="row">
+        <div class="col-8"></div>
+        <div class="col-2 ta-r">
+            <a href="" style="padding-right: 10px">회원가입</a>
+            <a href="">로그인</a>
+        </div>
+        <div class="col-2"></div>
+    </div>
+    <div class="row h-2">
+        <div class="col ta-c">
+            <img src="img/main-logo.png" class="main-logo">
+        </div>
+    </div>
+    <div class="row h-3">
+        <div class="col-2"></div>
+        <div class="col-1 ta-c"><a href="/">HOME</a></div>
+        <div class="col-1 ta-c"><a href="/breadList">베스트</a></div>
+        <div class="col-1 ta-c">커스텀빵여행</div>
+        <div class="col-1 ta-c">빵뮤니티</div>
+        <div class="col-4 ta-r">
+            <div class="search">
+                <input type="text" class="search-box Light" id="Light">
+                <img src="img/icon-search.png" class="search-icon">
+            </div>
+        </div>
+        <div class="col-2"></div>
+    </div>
+</div>
+<!--Article-->
+<div class="row ar1">
+    <div class="col-2"></div>
+    <div class="col ar-1">
+        <img src="img/dageon-map.png" class="img-map">
+    </div>
+    <div class="col ar-2">
+        <div class="row ar-sr">
+            <div class="col-4" style="width: 30%">
+                <img src="img/img-bread1.png" class="img-bread">
+            </div>
+            <div class="col-8">
+                <div class="row bread-title">
+                    성심당
+                </div>
+                <div class="row">
+                    #튀김소보루 #보문산메아리 #대전1위
+                </div>
+                <div class="row ar-address">
+                    대한민국 대전광역시 중구 대종로480번길 15
+                </div>
+
+            </div>
+        </div>
+        <div class="row ar-sr">
+            <div class="col-4" style="width: 30%">
+                <img src="img/img-bread2.jpg" class="img-bread">
+            </div>
+            <div class="col-8">
+                <div class="row bread-title">
+                    하루팡
+                </div>
+                <div class="row">
+                    #메론팡 #소금팡 #야끼소바팡
+                </div>
+                <div class="row ar-address">
+                    대전광역시 유성구 봉명동 611-1 호 그랑펠리체
+                </div>
+                <div class="row">
+                    <span class="tag-btn"><input type="button" class="btn btn-success tag-btn-detail" value="메론빵덕후pick"></span>
+                </div>
+            </div>
+        </div>
+        <div class="row ar-sr">
+            <div class="col-4" style="width: 30%">
+                <img src="img/img-bread3.png" class="img-bread">
+            </div>
+            <div class="col-8">
+                <div class="row bread-title">
+                    땡큐베리머치
+                </div>
+                <div class="row">
+                    #딸기케이크 #프리미엄케이크 #디저트
+                </div>
+                <div class="row ar-address">
+                    대흥동 250-2번지 하동 1층 중구 대전광역시 KR
+                </div>
+                <div class="row">
+                    <span class="tag-btn">
+                        <input type="button" class="btn btn-danger tag-btn-detail" value="딸기덕후pick">
+                    </span>
+                    <span class="tag-btn">
+                        <input type="button" class="btn btn-primary tag-btn-detail" value="1월BEST3위">
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-2"></div>
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
