--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,111 +1,103 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Hello</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="   css/index.css">
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <title>Title</title>
 </head>
 <body>
-<!--Header-->
-<div class="row h-1">
-    <div class="row">
-        <div class="col-8"></div>
-        <div class="col-2 ta-r">
-            <a href="" style="padding-right: 10px">회원가입</a>
-            <a href="">로그인</a>
-        </div>
-        <div class="col-2"></div>
+<!--Header 시작-->
+<div class="h-row1 h-set">
+    <div class="col1">
+        회원가입
     </div>
-    <div class="row h-2">
-        <div class="col ta-c">
-            <img src="img/main-logo.png" class="main-logo">
-        </div>
-    </div>
-    <div class="row h-3">
-        <div class="col-2"></div>
-        <div class="col-1 ta-c"><a href="/">HOME</a></div>
-        <div class="col-1 ta-c"><a href="/breadList">베스트</a></div>
-        <div class="col-1 ta-c">커스텀빵여행</div>
-        <div class="col-1 ta-c"><a href="/post">빵뮤니티</a></div>
-        <div class="col-4 ta-r">
-            <div class="search">
-                <input type="text" class="search-box Light" id="Light">
-                <img src="img/icon-search.png" class="search-icon">
-            </div>
-        </div>
-        <div class="col-2"></div>
+    <div class="col2">
+        로그인
     </div>
 </div>
-<!--Article-->
-<div class="row ar1">
-    <div class="col-2"></div>
-    <div class="col ar-1">
-        <img src="img/dageon-map.png" class="img-map">
+<div class="h-row2 h-set">
+    <div class="col1">
+        <img src="img/main-logo.png" class="main-logo">
     </div>
-    <div class="col ar-2">
-        <div class="row ar-sr">
-            <div class="col-4" style="width: 30%">
-                <img src="img/img-bread1.png" class="img-bread">
+</div>
+<div class="h-row3 h-set">
+    <div class="hr3s1"><a href="/">HOME</a></div>
+    <div class="hr3s1"><a href="/breadList">베스트</a></div>
+    <div class="hr3s1">커스텀빵여행</div>
+    <div class="hr3s1 "><a href="/post">빵뮤니티</a></div>
+    <div class="col1">
+        <div class="search">
+            <input type="text" class="search-box">
+            <img src="img/icon-search.png" class="search-icon">
+        </div>
+    </div>
+</div>
+<!--Header 종료-->
+
+<!--Article 시작-->
+
+<div class="a-row1">
+    <div class="col1">
+        <img src="img/dageon-map.png" class="map-img">
+    </div>
+    <div class="col2">
+        <div class="row1">
+            <div style="width: 30%">
+                <img src="img/img-bread1.png" class="bread-img">
             </div>
-            <div class="col-8">
-                <div class="row bread-title">
+            <div>
+                <div class="bread-title">
                     성심당
                 </div>
-                <div class="row">
+                <div>
                     #튀김소보루 #보문산메아리 #대전1위
                 </div>
-                <div class="row ar-address">
+                <div>
                     대한민국 대전광역시 중구 대종로480번길 15
                 </div>
 
             </div>
         </div>
-        <div class="row ar-sr">
+        <div class="row2">
             <div class="col-4" style="width: 30%">
-                <img src="img/img-bread2.jpg" class="img-bread">
+                <img src="img/img-bread2.jpg" class="bread-img">
             </div>
             <div class="col-8">
-                <div class="row bread-title">
+                <div class="bread-title">
                     하루팡
                 </div>
-                <div class="row">
+                <div>
                     #메론팡 #소금팡 #야끼소바팡
                 </div>
-                <div class="row ar-address">
+                <div>
                     대전광역시 유성구 봉명동 611-1 호 그랑펠리체
                 </div>
                 <div class="row">
-                    <span class="tag-btn"><input type="button" class="btn btn-success tag-btn-detail" value="메론빵덕후pick"></span>
+                    <input type="button" class="tag-btn bg-c3" value="메론빵덕후pick">
                 </div>
             </div>
         </div>
-        <div class="row ar-sr">
+        <div class="row3">
             <div class="col-4" style="width: 30%">
-                <img src="img/img-bread3.png" class="img-bread">
+                <img src="img/img-bread3.png" class="bread-img">
             </div>
             <div class="col-8">
-                <div class="row bread-title">
+                <div class="bread-title">
                     땡큐베리머치
                 </div>
-                <div class="row">
+                <div>
                     #딸기케이크 #프리미엄케이크 #디저트
                 </div>
-                <div class="row ar-address">
+                <div>
                     대흥동 250-2번지 하동 1층 중구 대전광역시 KR
                 </div>
                 <div class="row">
-                    <span class="tag-btn">
-                        <input type="button" class="btn btn-danger tag-btn-detail" value="딸기덕후pick">
-                    </span>
-                    <span class="tag-btn">
-                        <input type="button" class="btn btn-primary tag-btn-detail" value="1월BEST3위">
-                    </span>
+                        <input type="button" class="tag-btn bg-c1" value="딸기덕후pick">
+                        <input type="button" class="tag-btn bg-c2" value="1월BEST3위">
                 </div>
             </div>
         </div>
@@ -114,7 +106,9 @@
 </div>
 
 
+<!--Article 종료-->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
