refactor: post css 조정

--- a/src/main/resources/static/test/new_postList.html
+++ b/src/main/resources/static/test/new_postList.html
@@ -59,7 +59,7 @@
         <div class="desc">최신순</div>
     </div>
     <div class="a-row3">
-        <div class="title">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</div>
+        <a href="" class="title">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</a>
         <div class="likes"><img src="../img/icon-likes.png" class="likes-img">84</div>
         <div class="nickname">한화우승</div>
         <div class="desc">2024-02-01</div>
