--- a/src/main/resources/static/test/postDetail.html
+++ b/src/main/resources/static/test/postDetail.html
@@ -80,7 +80,10 @@
     </div>
     <div class="btn-pack">
       <a href="" class="btn-edit">[수정]</a>
-      <a href="" class="btn-delete">[삭제]</a>
+      <form method="post">
+        <input type="hidden" name="_method" value="DELETE"/>
+        <button type="submit" class="btn-delete">[삭제]</button>
+      </form>
     </div>
   </div>
 </div>
