--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,10 +14,14 @@
 <!--Header 시작-->
 <div class="h-row1 h-set">
     <div class="col1">
-        회원가입
+        <a href="/member">
+            회원가입
+        </a>
     </div>
     <div class="col2">
-        로그인
+        <a href="/member/login">
+            로그인
+        </a>
     </div>
 </div>
 <div class="h-row2 h-set">
