feat: 로그인 기능 구현 (#19)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
 </div>
 <div class="h-row2 h-set">
     <div class="col1">
-        <img src="img/main-logo.png" class="main-logo">
+        <img src="images/main-logo.png" class="main-logo">
     </div>
 </div>
 <div class="h-row3 h-set">
@@ -37,7 +37,7 @@
     <div class="col1">
         <div class="search">
             <input type="text" class="search-box">
-            <img src="img/icon-search.png" class="search-icon">
+            <img src="images/icon-search.png" class="search-icon">
         </div>
     </div>
 </div>
@@ -47,12 +47,12 @@
 
 <div class="a-row1">
     <div class="col1">
-        <img src="img/dageon-map.png" class="map-img">
+        <img src="images/dageon-map.png" class="map-img">
     </div>
     <div class="col2">
         <div class="row1">
             <div style="width: 30%">
-                <img src="img/img-bread1.png" class="bread-img">
+                <img src="images/img-bread1.png" class="bread-img">
             </div>
             <div>
                 <div class="bread-title">
@@ -69,7 +69,7 @@
         </div>
         <div class="row2">
             <div class="col-4" style="width: 30%">
-                <img src="img/img-bread2.jpg" class="bread-img">
+                <img src="images/img-bread2.jpg" class="bread-img">
             </div>
             <div class="col-8">
                 <div class="bread-title">
@@ -88,7 +88,7 @@
         </div>
         <div class="row3">
             <div class="col-4" style="width: 30%">
-                <img src="img/img-bread3.png" class="bread-img">
+                <img src="images/img-bread3.png" class="bread-img">
             </div>
             <div class="col-8">
                 <div class="bread-title">
