--- a/src/main/resources/static/test/loginForm.html
+++ b/src/main/resources/static/test/loginForm.html
@@ -26,7 +26,7 @@
 </div>
 <div class="h-row2 h-set">
   <div class="col1">
-    <img src="../img/main-logo.png" class="main-logo">
+    <img src="../images/main-logo.png" class="main-logo">
   </div>
 </div>
 <div class="h-row3 h-set">
@@ -37,7 +37,7 @@
   <div class="col1">
     <div class="search">
       <input type="text" class="search-box">
-      <img src="../img/icon-search.png" class="search-icon">
+      <img src="../images/icon-search.png" class="search-icon">
     </div>
   </div>
 </div>
