--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/header.css">
@@ -19,7 +18,7 @@
         </a>
     </div>
     <div class="col2">
-        <a href="/member/login" th:text="|로그인: ${member.name}|">
+        <a href="/member/login">
             로그인
         </a>
     </div>
