feat: 게시물 작성시 멤버 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,12 +13,12 @@
 <!--Header 시작-->
 <div class="h-row1 h-set">
     <div class="col1">
-        <a href="/member">
+        <a href="/members">
             회원가입
         </a>
     </div>
     <div class="col2">
-        <a href="/member/login">
+        <a href="/members/login">
             로그인
         </a>
     </div>
